--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,18 @@
 
     <button id="get-btn">Get Plants</button>
 
-    <section id="plant-container"></section>
+    <main>
 
+        <section id="plant-container"></section>
+
+        <form>
+            <h3>Add a plant</h3>
+            <input type="text" placeholder="name" id="name-input"/>
+            <input type="text" placeholder="family" id="family-input"/>
+            <button>submit</button>
+        </form>
+
+    </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./main.js"></script>
 </body>
